# DynamicShare

./: CMakeLists.txt  run.bat
DynamicShareCore/: CMakeLists.txt
DynamicShareCore/include/: DeviceDiscovery.h
DynamicShareCore/include/misc/: uuid.h
DynamicShareCore/src/: DeviceDiscovery.cpp
Sandbox/: CMakeLists.txt  main.cpp
